package mahjong;

import javaslang.collection.List;

public interface GroupedHandTiles {
    List<Hand> judge();
}
